[package]
name = "sa"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
repository = "https://github.com/DoumanAsh/static-assert"
documentation = "https://docs.rs/static-assert/"
categories = ["no-std"]
keywords = ["assert", "testing"]
readme = "README.md"
description = "Simple Rust macro to assert constant expressions"
license = "BSL-1.0"

[dependencies]
